# DESIGN-PATTERNS-IN-C-

./: AboutNamespaces.cpp  Abstract_Interface.cpp  AutomaticDoor.h  DependencyInversion.cpp  InterfaceSegregation.cpp  Readme.md  Singleton.cpp  Singleton.h  Strategy_Pattern.cpp  Template_Method.cpp  about_apis.cpp  api_examples.cpp  builder_facets.cpp  builder_pattern.cpp  click  cppcoroWhenAll.cpp  daytime.cppm  daytime_main.cpp  dynamic_decorators.cpp  factory_method.cpp  get_cursor_position_in_windows_part2.cpp  global20I.cpp  hide_implementation_classes.cpp  important_concepts.cpp  interface_segregatino.cpp  key_points_of_apis.txt  liskov_substitution_principle.cpp  logical_hiding_encapsulation.cpp  mouse.cpp  mouse_in_objective_c.cpp  mouse_programming.cpp  move_cursor_in_unix.cpp  open_closed_principle.cpp  other.c  person.h  physical_hiding.cpp  point_template.hpp  prefer_enums.cpp  real_life_examples_of_api.txt  set_cursor_in_windows.cpp  (+6 more)
AndrewHecode/: div1800I.cpp
Bridge/: CMakeLists.txt  main.cpp  person.cpp  person.h
GoogleTestBasic/: CMakeLists.txt
Introduction_to_C++/: dvelopment_tools.txt  history.txt  overview.txt  programming_paradigms.txt  ranges.cpp
Memory_management/: JarJar.h  a.out  (+11 more)
Opencv/: CMakeLists.txt  main.cpp
PasswordValidator/: CMakeLists.txt  casepasswordvalidator.cpp  casepasswordvalidator.h  digitpasswordvalidator.cpp  digitpasswordvalidator.h  ipasswordvalidate.h  lengthvalidator.cpp  lengthvalidator.h  main.cpp  passwordvalidatordecorator.cpp  passwordvalidatordecorator.h  symbolpasswordvalidator.cpp  symbolpasswordvalidator.h
(+91 files in other folders)
